--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "vue-loader": "^15.9.8",
         "vue-loading-overlay": "^3.4.2",
         "vue-meta": "^2.4.0",
+        "vue-multiselect": "^2.1.6",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.2",
         "vue-scrollto": "^2.20.0",
