--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "marcin-orlowski/laravel-api-response-builder": "^9.3",
         "nwidart/laravel-modules": "^8.2",
         "swiftmailer/swiftmailer": "^6.0",
         "tymon/jwt-auth": "dev-develop"
